[gd_scene load_steps=6 format=4 uid="uid://dwe2jb8kv5c0k"]

[ext_resource type="PackedScene" uid="uid://b46qouyu3lx2m" path="res://scenes/windows/window_base.tscn" id="1"]
[ext_resource type="Script" uid="uid://srdjn7dw14fj" path="res://scenes/windows/window_ghost_attack.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://di3xn1gey30ew" path="res://textures/icons/ghost.png" id="3"]
[ext_resource type="PackedScene" uid="uid://co5icrrrwscgg" path="res://scenes/input_container.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://b4efojcll7i7" path="res://scenes/output_container.tscn" id="5"]

[node name="WindowBase" instance=ExtResource("1")]
offset_bottom = 187.0
script = ExtResource("2")
window = "ghost_attack"

[node name="Icon" parent="TitlePanel/TitleContainer" index="0"]
texture = ExtResource("3")

[node name="Title" parent="TitlePanel/TitleContainer" index="1"]
text = "Ghost Attack"

[node name="MainContainer" type="VBoxContainer" parent="PanelContainer" index="0"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 10

[node name="DamageIn" parent="PanelContainer/MainContainer" index="0" node_paths=PackedStringArray("exporting") instance=ExtResource("4")]
layout_mode = 2
placeholder_name = "input_damage"
override_connector = "pentagon"
override_color = "red"
exporting = [NodePath("../DamageOut")]

[node name="DamageOut" parent="PanelContainer/MainContainer" index="1" instance=ExtResource("5")]
layout_mode = 2

[connection signal="resource_set" from="PanelContainer/MainContainer/DamageIn" to="." method="_on_damage_in_resource_set"]
